Solved the button alignment problem
Moved the buttons to the leftmost edge of their containers using flex
start

--- a/css/flexbox.css
+++ b/css/flexbox.css
@@ -20,6 +20,13 @@
 		flex: 1;
 		flex-direction: column;
 	}
+	
+	.button {
+		
+		margin-top: auto;
+		align-self: flex-start;
+		
+	}
 
 }
 
